--- a/services/movie_service/Dockerfile
+++ b/services/movie_service/Dockerfile
@@ -3,11 +3,11 @@ FROM python:3.13-slim
 WORKDIR /app
 
 # Copy requirements and install
-COPY movie_service/requirements.txt .
+COPY services/movie_service/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the service code
-COPY movie_service/ ./
+COPY services/movie_service/ ./
 # Copy common utils
 COPY common/ ./common/
 RUN pip install -r ./common/requirements.txt
