--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ anyio==4.10.0
     #   starlette
 bcrypt==4.3.0
     # via -r requirements.in
+celery[redis]
 certifi==2025.8.3
     # via
     #   httpcore
